Bug 417466 - Info Center System information loads at first but loads template text on redraw
Summary: Info Center System information loads at first but loads template text on redraw
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: About this System (show other bugs)
Version: 5.18.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-12 01:31 UTC by Kurt Kremitzki
Modified: 2020-02-12 11:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
Initial display (343.34 KB, image/png)
2020-02-12 01:31 UTC, Kurt Kremitzki
Details
Buggy template text displayed (296.32 KB, image/png)
2020-02-12 01:31 UTC, Kurt Kremitzki
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kurt Kremitzki 2020-02-12 01:31:00 UTC
Created attachment 125879 [details]
Initial display

SUMMARY

On KDE Neon Unstable Edition. When loading Info Center, the initial (default) loading of the System Information behaves correctly. However, after loading any other section, e.g. Memory or Energy, and then returning to System Information, template text is displayed instead of the previously shown content. In other words, we see "{NameVersionLabel}", etc.

STEPS TO REPRODUCE
1. Open Info Center.
2. Change selection from System Information to any other, e.g. Memory, Energy, ...
3. Return to System Information section.
4. Template text is displayed instead of actual information shown after step 1.

OBSERVED RESULT
See screenshot 2.

EXPECTED RESULT
See screenshot 1.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon Unstable Edition
(available in About System)
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.68.0
Qt Version: 5.13.2

ADDITIONAL INFORMATION
Comment 1 Kurt Kremitzki 2020-02-12 01:31:28 UTC
Created attachment 125880 [details]
Buggy template text displayed
Comment 2 Kurt Kremitzki 2020-02-12 01:32:39 UTC
Presumably related to https://phabricator.kde.org/D26667
Comment 3 Harald Sitter 2020-02-12 11:06:32 UTC
Yep, the infocenter window itself is now the same code as systemsettings and that seems to not unload modules entirely. Should be an easy fix. Thanks.
Comment 4 Harald Sitter 2020-02-12 11:16:37 UTC
Git commit c0be941faf015e588bc40817a29f83a85e92b951 by Harald Sitter.
Committed on 12/02/2020 at 11:16.
Pushed by sitter into branch 'master'.

don't hold initdness in a static var

with the move to systemsettings the module live times seem to have changed
so the statics survive a module switch and would prevent the module from
initializing again when viewed a second time.
instead simply look at m_entries to determine if we need to init. entries
are never empty after load, so it's a reliable indication for initdness.

M  +1    -3    Modules/about-distro/src/Module.cpp

https://commits.kde.org/kinfocenter/c0be941faf015e588bc40817a29f83a85e92b951